<resources>
    <string name="app_name">PetTracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="bienvenido">¡BIENVENIDO!</string>
    <string name="mensaje">¡Disfruta de la mejor tienda
        para mascotas!</string>
    <string name="contrasena">Contraseña</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="iniciarsesion">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="olvideContrasena">¡Olvidé mi Contraseña!</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="crearCuenta">CREAR CUENTA</string>
    <string name="crearPublicacion">CREAR PUBLICACIÓN</string>
    <string name="mispublicaciones">Mis Publicaciones</string>
    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="dias">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="nombrePub">Agility Gold Razas Grandes 3kg</string>
    <string name="precioPub">$38 500</string>


    <!-- Nombres Mis Publicaciones -->
    <string-array name="MisNombresProductos">
        <item>Agility Gold Razas Grandes 3kg</item>
        <item>Saco Snoppy Talla S</item>
        <item>Plato para Gatos</item>
        <item>Correa para perros</item>
        <item>Juguete para Gatos</item>
    </string-array>

    <!-- Fotos Mis Publicaciones -->
    <string-array name="fotoProductos">
        <item>@drawable/producto1</item>
        <item>@drawable/producto2</item>
        <item>@drawable/producto3</item>
        <item>@drawable/producto4</item>
        <item>@drawable/producto5</item>
    </string-array>

    <!-- Precios Mis Publicaciones -->
    <string-array name="precioProductos">
        <item>$38 500</item>
        <item>$34 900</item>
        <item>$14 600</item>
        <item>$6 300</item>
        <item>$45 200</item>
    </string-array>

    <string-array name="detalleProductos">
        <item>Comida para perros de 3kg para razas grandes, tambien se le puede dar a razas medianas.</item>
        <item>Saco de la tira animada snoppy talla S. Le sirve a razas medianas como french poodles, pomeranis o schnauzer.</item>
        <item>Plato para comida o agua. Uselo a su preferencia. De aproximadamente 500 ml.</item>
        <item>Correa para perros de cuero sintetico de alta duracion. Muy Buena.</item>
        <item>Juguete para gatos muy entretenido y duradero. Por experiencia personal se que le fascina a los gatos y hasta tambien a perro juguetones. </item>
    </string-array>


    <string-array name="roles">
        <item>Escoga un Rol</item>
        <item>Paseador</item>
        <item>Cliente</item>
    </string-array>

    <string-array name="types">
        <item>Tipo de Producto</item>
        <item>Comida</item>
        <item>Juguetes</item>
        <item>Accesorios</item>
        <item>Limpieza</item>
        <item>Medicamentos</item>
    </string-array>

    <string-array name="species">
        <item>Clasificación de Especie</item>
        <item>Gatos</item>
        <item>Perros</item>
    </string-array>

    <!-- Mapa -->
    <string name="mapbox_access_token">sk.eyJ1IjoicGhwZGFya2dob3N0IiwiYSI6ImNrbm5taWdwMzB6dmgzMW4xY3NuYWFldGkifQ.FVa8QgsQwPHXqQbqg9-VCA</string>
    <string name="title_activity_maps2">Map</string>
</resources>